--- a/index.html
+++ b/index.html
@@ -15,51 +15,86 @@
   </head>
   <body bgcolor="black" text="white">
     <main>
-      <div class="container">
-        <aside>
-          <nav class="navbar">
-            <div class="navbar-container container">
-              <input type="checkbox" name="" id="" />
-              <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-              </div>
-              <ul class="menu-items">
-                <a
-                  href="websitepage.html"
-                  class="button2"
-                  style="font-family: Arial; color: white"
-                  >WNS
-                </a>
-
-                <a
-                  href="blog.html"
-                  class="button2"
-                  style="font-family: Arial; color: white"
-                >
-                  Blog
-                </a>
-
-                <a
-                  href="uses.html"
-                  class="button2"
-                  style="font-family: Arial; color: white"
-                  >Uses
-                </a>
-
-                <a
-                  href="Schooling.html"
-                  class="button2"
-                  style="font-family: Arial; color: white"
-                >
-                  Schooling
-                </a>
-              </ul>
+      <aside>
+        <nav class="navbar">
+          <div class="navbar-container container">
+            <input type="checkbox" name="" id="" />
+            <div class="hamburger-lines">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
             </div>
-          </nav>
-        </aside>
+            <ul class="menu-items">
+              <a
+                href="websitepage.html"
+                class="button2"
+                style="font-family: Arial; color: white"
+                >WNS
+              </a>
+
+              <a
+                href="blog.html"
+                class="button2"
+                style="font-family: Arial; color: white"
+              >
+                Blog
+              </a>
+
+              <a
+                href="uses.html"
+                class="button2"
+                style="font-family: Arial; color: white"
+                >Uses
+              </a>
+
+              <a
+                href="Schooling.html"
+                class="button2"
+                style="font-family: Arial; color: white"
+              >
+                Schooling
+              </a>
+            </ul>
+          </div>
+        </nav>
+      </aside>
+      <div class="container">
         <section>
+          <div class="container2">
+            <div class="frame">
+              <div class="center">
+                <div class="profile">
+                  <div class="image">
+                    <div class="circle-1"></div>
+                    <div class="circle-2"></div>
+                  </div>
+
+                  <div class="name">Manroop Singh</div>
+                  <div class="job">Beginner Developer</div>
+
+                  <div class="actions">
+                    <button class="btn">Follow</button>
+                    <button class="btn">Message</button>
+                  </div>
+                </div>
+
+                <div class="stats">
+                  <div class="box">
+                    <span class="value">0</span>
+                    <span class="parameter">Posts</span>
+                  </div>
+                  <div class="box">
+                    <span class="value">N.a.n</span>
+                    <span class="parameter">Likes</span>
+                  </div>
+                  <div class="box">
+                    <span class="value">32</span>
+                    <span class="parameter">Follower</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <p
             class=".size"
             style="
