--- a/websitepage.html
+++ b/websitepage.html
@@ -65,7 +65,7 @@
         <br />
         <h2 style="font-family: arial">
           Don't have a religious book of Sikhism to swim in the ocean of
-          peace?&#11015check this out
+          peace?&#11015check this out.
         </h2>
         <a
           href="https://www.sikhitothemax.org/"
@@ -79,7 +79,7 @@
         <br />
         <br />
         <h2 style="font-family: Arial">
-          Want to find a perfect movie to watch with family?&#11015check this out
+          Want to find a perfect movie to watch with family?&#11015check this out.
         </h2>
         <a
           href="https://reactjs-moviefinder.vercel.app/"
@@ -91,7 +91,7 @@
         <br />
         <br />
         <h2 style="font-family: Arial">
-          Want to learn about Navdeep Singh?&#11015check out his website 
+          Want to learn about Navdeep Singh?&#11015check out his website.
         </h2>
         <a
           href="https://navdeepsingh.in/"
@@ -103,7 +103,7 @@
         >
         <br />
         <br />
-        <h2>&#11015check out his youtube channel</h2>
+        <h2>&#11015check out his youtube channel.</h2>
         <a
           href="https://www.youtube.com/c/NavdeepSinghEr"
           class="glow-on-hover" type="button"
@@ -133,7 +133,7 @@
       <div class="footer2">
         <p style="color: black">
           Lorem Ipsum is simply dummy text of the printing and typesetting
-          indust
+          industry
         </p>
         <p
           style="
